--- a/_posts/database/2024-11-17-Milvus3.md
+++ b/_posts/database/2024-11-17-Milvus3.md
@@ -4,10 +4,7 @@ description: Let's insert data in collection.
 author: DS2Man
 date: 2024-11-17 11:00:00 +0000
 categories: [Database, Milvus]
-tags:
-  - Database
-  - VectorDB
-  - Milvus
+tags: [Database, VectorDB, Milvus]
 math: true
 pin: true
 ---
