--- a/_posts/database/2024-11-01-MySQL1.md
+++ b/_posts/database/2024-11-01-MySQL1.md
@@ -4,10 +4,7 @@ description: Let's install MySQL.
 author: DS2Man
 date: 2024-11-01 11:00:00 +0000
 categories: [Database, MySQL]
-tags:
-  - Database
-  - RDB
-  - MySQL
+tags: [Database, RDB, MySQL]
 math: true
 pin: true
 ---
