--- a/_posts/database/2024-11-15-Milvus1.md
+++ b/_posts/database/2024-11-15-Milvus1.md
@@ -4,10 +4,7 @@ description: Let's install Milvus and MinIO and Attu.
 author: DS2Man
 date: 2024-11-15 11:00:00 +0000
 categories: [Database, Milvus]
-tags:
-  - Database
-  - VectorDB
-  - Milvus
+tags: [Database, VectorDB, Milvus]
 math: true
 pin: true
 ---
