--- a/_posts/frontend/svelte/2025-03-27-Svelte4.md
+++ b/_posts/frontend/svelte/2025-03-27-Svelte4.md
@@ -150,6 +150,7 @@ declare module 'svelte/store' {
   export let name = writable('DS2Man');
 </script>
 
+{% raw %}
 <main>
   <App />
 
@@ -157,6 +158,7 @@ declare module 'svelte/store' {
        <button on:click={()=>(isEvent=false)}>X</button>
   </div>
   </main>
+{% endraw %}
 ```
 
 As I told you, the way you use the `import` statement depends on how the variables or functions are **exported**.  
