--- a/_posts/mylife/2025-04-04-MyOpinion-2025-1Q.md
+++ b/_posts/mylife/2025-04-04-MyOpinion-2025-1Q.md
@@ -1,5 +1,5 @@
 ---
-title: The first quarter of 2025 — The beginning of a whirlwind 
+title: The first quarter of 2025 - Starting My Blog
 description: 
 author: DS2Man
 date: 2025-04-04 09:00:00 +0000
