--- a/_posts/mylife/2024-12-15-MyOpinion-2024.md
+++ b/_posts/mylife/2024-12-15-MyOpinion-2024.md
@@ -1,9 +1,11 @@
 ---
-title: 2024 — A Year That Gave Me a Lot to Think About
+title: 2024 - A Year That Gave Me a Lot to Think About
 description: 
 author: DS2Man
 date: 2024-12-15 11:00:00 +0000
-categories: [Mylife, Opinion]
+categories:
+  - Mylife
+  - Opinion
 tags:
   - Mylife
   - Opinion
