--- a/_posts/etc/2024-12-11-(Ing)Blog2.md
+++ b/_posts/etc/2024-12-11-(Ing)Blog2.md
@@ -9,6 +9,12 @@ math: true
 pin: true
 ---
 
+<!--
+필독!!!하고 등록하자.!!!! 지금은 등록만 한것임.
+https://www.youtube.com/watch?v=xGkftwkoJK4&t=150s
+-->
+
+
 In the previous post, I explained how to track blog visitors using GA4. However, the blog still doesn't appear in Google or Naver search results. Let me share my blog with you.
 
 ## *Google Search Console*
@@ -50,3 +56,8 @@ In addition, it offers detailed error reports that help you identify and fix **S
 #### *Add My Blog to Naver Search Advisor*
 
 - Go to [Naver Search Advisor](https://searchadvisor.naver.com/). 
+
+
+
+![Add Blog to Naver Search Advisor](/assets/img/blog/2024-12-11-Blog2_3.png)
+_Add Blog to Naver Search Advisor_
