--- a/_posts/database/2024-11-15-Milvus1.md
+++ b/_posts/database/2024-11-15-Milvus1.md
@@ -50,7 +50,7 @@ The [Milvus GitHub Releases page](https://github.com/milvus-io/milvus/releases) 
 
 #### *The entire process to Install Milvus on Ubuntu*
 
-As mentioned earlier, you can check and download the official release versions of **Milvus** from the [Milvus GitHub Releases page](https://github.com/milvus-io/milvus/releases). Since my setup includes GPU support([My NVIDIA Container Toolkit Setup](https://jaoneol.github.io/posts/Docker-Setup6/#install-nvidia-contrainer-toolkit)), I downloaded the `docker-compose-gpu.yml` file and modified it to fit my needs. The changes have also been documented. In particular, I have added **Docker volume management** and **Attu**, a tool for managing Milvus. Please take note of these modifications. The entire process is as follows.    
+As mentioned earlier, you can check and download the official release versions of **Milvus** from the [Milvus GitHub Releases page](https://github.com/milvus-io/milvus/releases). Since my setup includes GPU support([My NVIDIA Container Toolkit Setup](https://ds2man.github.io/posts/Docker-Setup6/#install-nvidia-contrainer-toolkit)), I downloaded the `docker-compose-gpu.yml` file and modified it to fit my needs. The changes have also been documented. In particular, I have added **Docker volume management** and **Attu**, a tool for managing Milvus. Please take note of these modifications. The entire process is as follows.    
 
 <!--
 앞서 이야기한바처럼 [Milvus GitHub Releases 페이지](https://github.com/milvus-io/milvus/releases)에서  **Milvus**의 공식 배포 버전(릴리스)을 확인하고 다운로드할 수 있다. 나는 gpu 설정이 되어 있으므로, docker-compose-gpu.yml을 다운로드 후 내가 필요한 부분으로 수정하였다.
