--- a/_posts/frontend/svelte/2025-03-26-Svelte3.md
+++ b/_posts/frontend/svelte/2025-03-26-Svelte3.md
@@ -11,7 +11,7 @@ pin: true
   
 ## *Two Ways to Create a Project*
 
-[Svelte](https://svelte.dev/docs/svelte/getting-started) recommends using SvelteKit to create a new project.  Let’s follow that recommendation.
+[Svelte](https://svelte.dev/docs/svelte/getting-started) recommends using [SvelteKit](https://svelte.dev/docs/kit/creating-a-project) to create a new project.  Let’s follow that recommendation.    
 <!--
 공식 홈페이지에서는 Sveltkit을 가지고 생성하라고 권장하고 있다. 그대로 따르자.
 -->
@@ -24,29 +24,28 @@ Additionally, there are various frontend frameworks available today such as Reac
 ![Svelte and Vite](/assets/img/svelte/2025-03-26-SVELTE3_1.png)
 _Svelte and Vite_
 
-## *Create Project using Sveltekit*
+## *Project using Sveltekit(with javascript)*
+
+#### *Create Project*
 
 The command is simple. [Svelte](https://svelte.dev/docs/svelte/getting-started) recommends using SvelteKit to create a new project. Just enter the following and proceed. You’ll be prompted to select a framework and a variant.
 
 - `npx sv create <project-name>`
 
 ```bash
-PS D:\02.MyCode\GP-MyReference\21.MySvelte> npx sv create 03.svelte-study
+PS D:\02.MyCode\GP-MyReference\21.MySvelte> npx sv create 03.svelte-javascript-study
 ┌  Welcome to the Svelte CLI! (v0.8.0)
 │
 ◇  Which template would you like?
 │  SvelteKit minimal
 │
 ◇  Add type checking with TypeScript?
-│  Yes, using TypeScript syntax
+│  Yes, using JavaScript with JSDoc comments
 │
 ◆  Project created
 │
 ◇  What would you like to add to your project? (use arrow keys / space bar)
-│  prettier, eslint, tailwindcss
-│
-◇  tailwindcss: Which plugins would you like to add?
-│  typography, forms
+│  prettier, eslint
 │
 ◆  Successfully setup add-ons
 │
@@ -59,7 +58,7 @@ PS D:\02.MyCode\GP-MyReference\21.MySvelte> npx sv create 03.svelte-study
 │
 ◇  Project next steps ─────────────────────────────────────────────────────╮
 │                                                                          │
-│  1: cd 03.svelte-study                                                   │
+│  1: cd 03.svelte-javascript-study                                        │
 │  2: git init && git add -A && git commit -m "Initial commit" (optional)  │
 │  3: npm run dev -- --open                                                │
 │                                                                          │
@@ -71,7 +70,7 @@ PS D:\02.MyCode\GP-MyReference\21.MySvelte> npx sv create 03.svelte-study
 │
 └  You're all set!
 
-PS D:\02.MyCode\GP-MyReference\21.MySvelte> 
+PS D:\02.MyCode\GP-MyReference\21.MySvelte>
 ```
 
 The directory structure of the generated project is as follows.
@@ -83,9 +82,7 @@ my-project/
 ├── src/
 │   ├── lib/               # Shared components, utilities, and modules
 │   ├── routes/
-│   │   ├── +layout.svelte # The root route ("/") page component
 │   │   └── +page.svelte   # The root route ("/") page component
-│   ├── app.css            # css
 │   ├── app.d.ts           # Type declarations (used in TypeScript projects)
 │   └── app.html           # HTML template used to render the app
 ├── static/
@@ -99,55 +96,197 @@ my-project/
 ├── package-lock.json      # Exact version lock for installed packages
 ├── README.md              # Project documentation
 ├── svelte.config.js       # Configuration for SvelteKit
-├── tsconfig.json          # TypeScript compiler options
 └── vite.config.ts         # Vite configuration (in TypeScript)
 ```
 
-Once the project has been created, follow the steps below.
+#### *Running Project*
 
-- `cd svelte-javascript-vite-project` # Move the project directory.
-- `npm install` # Installs the packages related to the project.  
-    `npm install --verbose` # to see detailed information during package installation
-- `npm run dev` # Runs the development server.
+- `npm run dev`
 
 ```bash
-PS D:\02.MyCode\GP-MyReference\21.MySvelte\03.svelte-study> cd ..
-PS D:\02.MyCode\GP-MyReference\21.MySvelte> cd .\03.svelte-study\
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\03.svelte-javascript-study> npm run dev
 
-> 03.svelte-study@0.0.1 prepare
-> svelte-kit sync || echo ''
-
-
-up to date, audited 204 packages in 2s
-
-51 packages are looking for funding
-  run `npm fund` for details
-
-3 low severity vulnerabilities
-
-To address all issues (including breaking changes), run:
-  npm audit fix --force
-
-Run `npm audit` for details.
-PS D:\02.MyCode\GP-MyReference\21.MySvelte\03.svelte-study> npm run dev
-
-> 03.svelte-study@0.0.1 dev
+> 03.svelte-javascript-study@0.0.1 dev
 > vite dev
 
-오전 10:16:45 [vite] (client) Forced re-optimization of dependencies
+오전 6:52:10 [vite] (client) Forced re-optimization of dependencies
 
-  VITE v6.2.6  ready in 1150 ms
+  VITE v6.2.6  ready in 982 ms
 
   ➜  Local:   http://localhost:5173/
   ➜  Network: use --host to expose
   ➜  press h + enter to show help
 ```
 
-![Run Project](/assets/img/svelte/2025-03-24-SVELTE1_7.png)
+![Run Project](/assets/img/svelte/2025-03-26-SVELTE3_2.png)
 _Run Project_
 
+#### *Modify and Install Packages*
 
-## *Create Project using Vite(Not recommended for me)*
+I'll configure the Dockerfile in a way that **runs the Node.js server directly**.  
+SvelteKit can only be run as a Node.js server when using **`adapter-node`**.
+
+- `Modify svelt.config.ts`
+	`- import adapter from '@sveltejs/adapter-auto';
+	`+ import adapter from '@sveltejs/adapter-node';
+- `npm install -D @sveltejs/adapter-node`
+
+```bash
+// import adapter from '@sveltejs/adapter-auto';
+import adapter from '@sveltejs/adapter-node';
+
+/** @type {import('@sveltejs/kit').Config} */
+const config = {
+	kit: {
+		// adapter-auto only supports some environments, see https://svelte.dev/docs/kit/adapter-auto for a list.
+		// If your environment is not supported, or you settled on a specific environment, switch out the adapter.
+		// See https://svelte.dev/docs/kit/adapters for more information about adapters.
+		adapter: adapter()
+	}
+};
+
+export default config;
+```
+
+```bash
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\03.svelte-javascript-study> npm install -D @sveltejs/adapter-node
+
+added 17 packages, and audited 172 packages in 11s
+
+40 packages are looking for funding
+  run `npm fund` for details
+
+4 low severity vulnerabilities
+
+To address all issues (including breaking changes), run:
+  npm audit fix --force
+
+Run `npm audit` for details.
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\03.svelte-javascript-study> 
+```
+
+#### *Make dockerfile*
+
+```bash
+# --- Build Stage ---
+FROM node:20-alpine AS builder
+
+WORKDIR /app
+
+COPY package*.json ./
+COPY .npmrc .npmrc
+RUN npm ci
+
+COPY . .
+RUN npm run build
+
+# --- Runtime Stage ---
+FROM node:20-alpine AS runner
+
+WORKDIR /app
+
+COPY --from=builder /app/build ./build
+COPY --from=builder /app/package*.json ./
+COPY --from=builder /app/.svelte-kit ./.svelte-kit
+COPY --from=builder /app/svelte.config.* ./
+COPY --from=builder /app/src ./src
+
+RUN npm ci --omit=dev
+
+EXPOSE 3000
+
+CMD ["node", "build"]
+```
+
+#### *Build image and Run container*
+
+- `docker build -t svelte-javascript-study .`
+- `docker run -p 3000:3000 --name svelte-javascript-study svelte-javascript-study`
+
+```bash
+
+(base) jaoneol@DESKTOP-B7GM3C5:/mnt/d/02.MyCode/GP-MyReference/21.MySvelte/03.svelte-javascript-study$ docker build -t svelte-javascript-study .
+[+] Building 15.9s (19/19) FINISHED                                                                                                                                               docker:default
+ => [internal] load build definition from dockerfile                                                                                                                                        0.0s
+ => => transferring dockerfile: 553B                                                                                                                                                        0.0s
+ => [internal] load metadata for docker.io/library/node:20-alpine                                                                                                                           1.7s
+ => [auth] library/node:pull token for registry-1.docker.io                                                                                                                                 0.0s
+ => [internal] load .dockerignore                                                                                                                                                           0.0s
+ => => transferring context: 2B                                                                                                                                                             0.0s
+ => [builder 1/7] FROM docker.io/library/node:20-alpine@sha256:8bda036ddd59ea51a23bc1a1035d3b5c614e72c01366d989f4120e8adca196d4                                                             0.0s
+ => [internal] load build context                                                                                                                                                           6.5s
+ => => transferring context: 79.80MB                                                                                                                                                        6.5s
+ => CACHED [builder 2/7] WORKDIR /app                                                                                                                                                       0.0s
+ => [builder 3/7] COPY package*.json ./                                                                                                                                                     0.2s
+ => [builder 4/7] COPY .npmrc .npmrc                                                                                                                                                        0.0s
+ => [builder 5/7] RUN npm ci                                                                                                                                                                3.2s
+ => [builder 6/7] COPY . .                                                                                                                                                                  0.5s
+ => [builder 7/7] RUN npm run build                                                                                                                                                         2.3s
+ => [runner 3/8] COPY --from=builder /app/build ./build                                                                                                                                     0.0s
+ => [runner 4/8] COPY --from=builder /app/package*.json ./                                                                                                                                  0.1s
+ => [runner 5/8] COPY --from=builder /app/.svelte-kit ./.svelte-kit                                                                                                                         0.0s
+ => [runner 6/8] COPY --from=builder /app/svelte.config.* ./                                                                                                                                0.1s
+ => [runner 7/8] COPY --from=builder /app/src ./src                                                                                                                                         0.0s
+ => [runner 8/8] RUN npm ci --omit=dev                                                                                                                                                      0.6s
+ => exporting to image                                                                                                                                                                      0.1s
+ => => exporting layers                                                                                                                                                                     0.1s
+ => => writing image sha256:edee6ab66eff7f7fb89fa8621a32a5e4def6798adffc1330572632e876405da4                                                                                                0.0s
+ => => naming to docker.io/library/svelte-javascript-study                                                                                                                                  0.0s
+(base) jaoneol@DESKTOP-B7GM3C5:/mnt/d/02.MyCode/GP-MyReference/21.MySvelte/03.svelte-javascript-study$
+```
+
+```bash
+(base) jaoneol@DESKTOP-B7GM3C5:/mnt/d/02.MyCode/GP-MyReference/21.MySvelte/03.svelte-javascript-study$ docker run -p 3000:3000 --name svelte-javascript-study svelte-javascript-study
+Listening on http://0.0.0.0:3000
+^C^C(base) jaoneol@DESKTOP-B7GM3C5:/mnt/d/02.MyCode/GP-MyReference/21.MySvelte/03.svelte-javascript-study$ 
+```
+
+## *Project Structure Overview*
+
+#### *Structure of svelte*
+
+The structure of a Svelte file is as follows. It consists of three main sections: `script`, `main`, and `style`, each serving the following purpose:
+
+```svelte
+<script>
+  // JavaScript section: handles the logic
+  // For example: click events, data processing, API calls, etc.
+</script>
+
+<main>
+  <!-- HTML section: defines the main content of the web page -->
+</main>
+
+<style>
+  // CSS section: defines the styles
+</style>
+```
+
+## *Useful VSCode Extensions*
+
+#### *Svelte for VS Code*
+
+**Svelte for VS Code** is an extension that helps you develop more efficiently with the Svelte framework in the Visual Studio Code editor. Let’s install it.
+
+![Svelte for VS Code](/assets/img/svelte/2025-03-26-SVELTE3_4.png)
+_Svelte for VS Code_
+
+#### *Svelte 3 Snippets*
+
+**Svelte 3 Snippets** is an extension that helps you easily insert commonly used code patterns into `.svelte` files using autocomplete functionality. It is primarily designed for Svelte version 3 and allows you to quickly write repetitive code blocks. Let’s install it.
+
+![Svelte 3 Snippets](/assets/img/svelte/2025-03-26-SVELTE3_5.png)
+_Svelte 3 Snippets_
+
+#### *Thunder Client*
+
+**Thunder Client** is a REST API client extension for VSCode. It offers functionality similar to Postman but is lighter, faster, and integrated directly into VSCode, making it a great tool for testing APIs during development. Let’s install it.
+
+![Thunder Client](/assets/img/svelte/2025-03-26-SVELTE3_6.png)
+_Thunder Client_
+
+
+## *Project using Vite(Not recommended for me)*
 
 The command is also simple. If you're exploring multiple frameworks or just want to understand how Vite works, then `npm create vite@latest` is a flexible choice(Not recommended for me.).
 
@@ -258,138 +397,5 @@ The directory structure of the project, including the added files, is as follows
 └── vite.config.js
 ```
 
-![My Svelte Page](/assets/img/svelte/2025-03-26-SVELTE3_2.png)
+![My Svelte Page](/assets/img/svelte/2025-03-26-SVELTE3_3.png)
 _My Svelte Page_
-
-## *Project Structure Overview*
-
-#### *Structure of svelte*
-
-The structure of a Svelte file is as follows. It consists of three main sections: `script`, `main`, and `style`, each serving the following purpose:
-
-```svelte
-<script>
-  // JavaScript section: handles the logic
-  // For example: click events, data processing, API calls, etc.
-</script>
-
-<main>
-  <!-- HTML section: defines the main content of the web page -->
-</main>
-
-<style>
-  // CSS section: defines the styles
-</style>
-```
-
-#### *Detailed package.json*
-
-Let's take a closer look at the scripts added to `package.json`.
-
-```jsonc
-// package.json
-
-{
-	"name": "03.svelte-study",
-	"private": true,
-	"version": "0.0.1",
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev",           // Runs Vite using the command `npm run dev`      
-		"build": "vite build",       // Builds the project for production deployment
-		"preview": "vite preview",   // Serves the built project locally for testing
-		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"format": "prettier --write .",
-		"lint": "prettier --check . && eslint ."
-	},
-	"devDependencies": {
-		"@eslint/compat": "^1.2.5",
-		"@eslint/js": "^9.18.0",
-		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"@tailwindcss/forms": "^0.5.9",
-		"@tailwindcss/typography": "^0.5.15",
-		"@tailwindcss/vite": "^4.0.0",
-		"eslint": "^9.18.0",
-		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-svelte": "^3.0.0",
-		"globals": "^16.0.0",
-		"prettier": "^3.4.2",
-		"prettier-plugin-svelte": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.11",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"tailwindcss": "^4.0.0",
-		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.20.0",
-		"vite": "^6.2.5"
-	}
-}
-```
-
-- `npm run dev` — Runs a local development server
-	- Instant feedback during development
-	- No bundling → very fast
-	- Source maps enabled for easy debugging
-	- Not optimized for production
-    
-- `npm run build` — Generates an optimized and minified version of your app
-	- Minifies and bundles JS/CSS
-	- Produces a **`dist/`** folder with deployable files
-	- Slower than dev mode, but optimized
-	- optional Step: Test with a Local HTTP Server    
-		`npm install -g serve`    
-		`serve dist`  
-
-```bash
-# What’s Inside the `dist/` Folder? 
-# All assets are **minified**, optimized, and ready to deploy.
-
-dist/
-├── index.html
-├── assets/
-│   ├── index-BcGE2Ypm.js
-│   ├── index-Ugp4xLko.css
-```
-	
-```bash
-PS D:\02.MyCode\GP-MyReference\21.MySvelte\03.svelte-vite-javascrit-project> npm install -g serve
-added 88 packages in 3s
-24 packages are looking for funding
-  run `npm fund` for details
-PS D:\02.MyCode\GP-MyReference\21.MySvelte\03.svelte-vite-javascrit-project> serve dist
-   ┌─────────────────────────────────────────────┐
-   │                                             │
-   │   Serving!                                  │
-   │                                             │
-   │   - Local:    http://localhost:3000         │
-   │   - Network:  http://180.227.217.220:3000   │
-   │                                             │
-   │   Copied local address to clipboard!        │
-   │                                             │
-   └─────────────────────────────────────────────┘
-```
-
-- `npm run preview` — Runs a local server to preview the **production-ready** build
-	- Simulates how your app will behave in production
-	- No live reloading or dev features
-	- Useful for final testing
-
-```bash
-PS D:\02.MyCode\GP-MyReference\21.MySvelte\03.svelte-vite-javascrit-project> npm run preview
-> svelte-vite-javascrit-project@0.0.0 preview
-> vite preview
-  ➜  Local:   http://localhost:4173/
-  ➜  Network: use --host to expose
-  ➜  press h + enter to show help
-```
-
-#### *Install Svelte for VS Code*
-
-**Svelte for VS Code** is an extension that helps you develop more efficiently with the Svelte framework in the Visual Studio Code editor. Let’s install it.
-
-![Svelte for VS Code](/assets/img/svelte/2025-03-26-SVELTE3_3.png)
-_Svelte for VS Code_
