--- a/_posts/frontend/svelte/2025-03-24-Svelte1.md
+++ b/_posts/frontend/svelte/2025-03-24-Svelte1.md
@@ -66,10 +66,11 @@ The entire process is as follows:
 - `npm init`  
 - `Make index.html and index.js`
 - `npm install <package-name> --verbose`
-	  `npm install --verbose`
+	`npm install --verbose`
 - `node index.js`    
-	  if you want to execute your script using Node.js
+	if you want to execute your script using Node.js
 - `npm run xxx(e.g. dev/test/start/build ...)`
+	Modify the package.json
 
 The steps to create and build a Dockerfile are as follows.
 
@@ -332,7 +333,8 @@ You can define and run custom scripts in `package.json`:
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1", # command: `npm run test`
     "testdir": "dir", # Add it manually, When you run `npm run dev`, the `dir` command will be executed.
-    "dev": "serve ."
+    "dev": "serve .",
+    "start": "serve ."
   },
   "author": "",
   "license": "ISC",
@@ -494,7 +496,7 @@ Since I'm new to SvelteKit, I'll proceed with the demo option. OpenWebUI is buil
 
 - `npx sv create <project-name>`
 
-```bash
+```
 PS D:\02.MyCode\GP-MyReference\21.MySvelte> npx sv create 02.npx-study
 ┌  Welcome to the Svelte CLI! (v0.8.0)
 │
@@ -653,13 +655,15 @@ _Run Project_
 I'll configure the Dockerfile in a way that **runs the Node.js server directly**.  
 SvelteKit can only be run as a Node.js server when using **`adapter-node`**.
 
-- `Modify svelt.config.ts`
-	`- import adapter from '@sveltejs/adapter-auto';
+If you don’t switch to `adapter-node` or `adapter-static`, there won’t be any issues when running `npm run dev`, but the bundling process won’t proceed during `npm run build`. In other words, the `build` directory won’t be created, so you won’t be able to run `node build`.
+
+- `Modify svelte.config.ts`    
+	`- import adapter from '@sveltejs/adapter-auto';    
 	`+ import adapter from '@sveltejs/adapter-node';
 	
 - `npm install -D @sveltejs/adapter-node`
 
-```bash
+```javascript
 // import adapter from '@sveltejs/adapter-auto';
 import adapter from '@sveltejs/adapter-node';
 import { vitePreprocess } from '@sveltejs/vite-plugin-svelte';
@@ -702,7 +706,7 @@ PS D:\02.MyCode\GP-MyReference\21.MySvelte\02.npx-study>
 
 - `npm run build`
 
-An `output` directory is created inside `.svelte-kit`, and the build results are generated in the `client` and `server` directories respectively.
+An `output` directory is created inside `.svelte-kit`, and the build results are generated in the `client` and `server` directories respectively. At the same time, bundling is performed and the `build` directory is also created.
 
 Two separate builds were done:
 - **SSR (Server-Side Rendering) build**
@@ -778,7 +782,7 @@ build/
 	└── manifest.js.map       
 ├── env.js
 ├── handler.js
-├── index.js
+├── index.js     # Note. When you run `node build`, it executes `node ./build/index.js`.
 └── shims.js
 ```
 
