--- a/_posts/frontend/svelte/2025-03-26-Svelte3.md
+++ b/_posts/frontend/svelte/2025-03-26-Svelte3.md
@@ -30,9 +30,13 @@ The command is simple. [Svelte](https://svelte.dev/docs/svelte/getting-started) 
 
 - `npx sv create <project-name>`
 
-```bash
-PS D:\02.MyCode\GP-MyReference\21.MySvelte> npx sv create 03.svelte-typescript-tailwindcss-study
-┌  Welcome to the Svelte CLI! (v0.8.0)
+There are various options you can choose from during project creation. I plan to follow the setup based on the relevant packages used in OpenWebUI. For now, let’s proceed with the options below.
+
+- `SvelteKit minimal`, `TypeScript`,  `tailwindcss(not include plugins)`, `npm`
+
+```
+PS D:\02.MyCode\GP-MyReference\21.MySvelte> npx sv create 06.svelte-ts-tw-study
+┌  Welcome to the Svelte CLI! (v0.8.1)
 │
 ◇  Which template would you like?
 │  SvelteKit minimal
@@ -43,10 +47,9 @@ PS D:\02.MyCode\GP-MyReference\21.MySvelte> npx sv create 03.svelte-typescript-t
 ◆  Project created
 │
 ◇  What would you like to add to your project? (use arrow keys / space bar)
-│  prettier, eslint, tailwindcss
+│  tailwindcss
 │
-◇  tailwindcss: Which plugins would you like to add?
-│  typography
+◇  Which plugins would you like to add?
 │
 ◆  Successfully setup add-ons
 │
@@ -55,11 +58,9 @@ PS D:\02.MyCode\GP-MyReference\21.MySvelte> npx sv create 03.svelte-typescript-t
 │
 ◆  Successfully installed dependencies
 │
-◇  Successfully formatted modified files
-│
 ◇  Project next steps ─────────────────────────────────────────────────────╮
 │                                                                          │
-│  1: cd 03.svelte-typescript-tailwindcss-study                            │
+│  1: cd 06.svelte-ts-tw-study                                             │
 │  2: git init && git add -A && git commit -m "Initial commit" (optional)  │
 │  3: npm run dev -- --open                                                │
 │                                                                          │
@@ -99,9 +100,6 @@ The directory structure of the generated project is as follows.
 │
 ├── .gitignore                    # Git ignore rules
 ├── .npmrc                        # npm configuration (e.g. registry, auth)
-├── .prettierignore               # Files to ignore during formatting
-├── .prettierrc                   # Prettier configuration
-├── eslint.config.js              # ESLint configuration
 ├── package.json                  # Project metadata and dependencies
 ├── package-lock.json             # Locked dependency versions
 ├── README.md                     # Project documentation
@@ -115,18 +113,17 @@ The directory structure of the generated project is as follows.
 - `npm run dev`
 
 ```bash
-PS D:\02.MyCode\GP-MyReference\21.MySvelte\03.svelte-typescript-tailwindcss-study> npm run dev
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\06.svelte-ts-tw-study> npm run dev
 
-> 03.svelte-typescript-tailwindcss-study@0.0.1 dev
+> 06.svelte-ts-tw-study@0.0.1 dev
 > vite dev
 
-오후 12:51:02 [vite] (client) Forced re-optimization of dependencies
-
-  VITE v6.2.6  ready in 1271 ms
+  VITE v6.2.6  ready in 1065 ms
 
   ➜  Local:   http://localhost:5173/
   ➜  Network: use --host to expose
   ➜  press h + enter to show help
+
 ```
 
 ![Run Project](/assets/img/svelte/2025-03-26-SVELTE3_2.png)
@@ -137,17 +134,25 @@ _Run Project_
 I'll configure the Dockerfile in a way that **runs the Node.js server directly**.  
 SvelteKit can only be run as a Node.js server when using **`adapter-node`**.
 
-- `Modify svelt.config.ts`
-	`- import adapter from '@sveltejs/adapter-auto';
+If you don’t switch to `adapter-node` or `adapter-static`, there won’t be any issues when running `npm run dev`, but the bundling process won’t proceed during `npm run build`. In other words, the `build` directory won’t be created, so you won’t be able to run `node build`.
+
+- `Modify svelt.config.ts`    
+	`- import adapter from '@sveltejs/adapter-auto';    
 	`+ import adapter from '@sveltejs/adapter-node';
 - `npm install -D @sveltejs/adapter-node`
 
-```bash
+```javascript
 // import adapter from '@sveltejs/adapter-auto';
 import adapter from '@sveltejs/adapter-node';
+// import adapter from '@sveltejs/adapter-static';
+import { vitePreprocess } from '@sveltejs/vite-plugin-svelte';
 
 /** @type {import('@sveltejs/kit').Config} */
 const config = {
+	// Consult https://svelte.dev/docs/kit/integrations
+	// for more information about preprocessors
+	preprocess: vitePreprocess(),
+
 	kit: {
 		// adapter-auto only supports some environments, see https://svelte.dev/docs/kit/adapter-auto for a list.
 		// If your environment is not supported, or you settled on a specific environment, switch out the adapter.
@@ -160,7 +165,7 @@ export default config;
 ```
 
 ```bash
-PS D:\02.MyCode\GP-MyReference\21.MySvelte\03.svelte-typescript-tailwindcss-study> npm install -D @sveltejs/adapter-node
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\06.svelte-ts-tw-study> npm install -D @sveltejs/adapter-node
 
 added 17 packages, changed 1 package, and audited 218 packages in 10s
 
@@ -173,7 +178,93 @@ To address all issues (including breaking changes), run:
   npm audit fix --force
 
 Run `npm audit` for details.
-PS D:\02.MyCode\GP-MyReference\21.MySvelte\03.svelte-typescript-tailwindcss-study> 
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\06.svelte-ts-tw-study> 
+```
+
+#### *Build Project*
+
+- `npm run build`
+
+An `output` directory is created inside `.svelte-kit`, and the build results are generated in the `client` and `server` directories respectively. At the same time, bundling is performed and the `build` directory is also created.
+
+Two separate builds were done:
+- **SSR (Server-Side Rendering) build**
+- **Client-side (browser) build**
+
+```bash
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\06.svelte-ts-tw-study> npm run build
+
+> 06.svelte-ts-tw-study@0.0.1 build
+> vite build
+
+vite v6.2.6 building SSR bundle for production...
+✓ 158 modules transformed.
+vite v6.2.6 building for production...
+✓ 135 modules transformed.
+.svelte-kit/output/client/_app/version.json                        0.03 kB │ gzip:  0.05 kB
+.svelte-kit/output/client/.vite/manifest.json                      2.77 kB │ gzip:  0.55 kB
+.svelte-kit/output/client/_app/immutable/assets/0.B9Zmw5mq.css     4.02 kB │ gzip:  1.35 kB
+.svelte-kit/output/client/_app/immutable/chunks/BDmovnSk.js        0.03 kB │ gzip:  0.05 kB
+.svelte-kit/output/client/_app/immutable/entry/start.CHlKZRH5.js   0.08 kB │ gzip:  0.09 kB
+.svelte-kit/output/client/_app/immutable/nodes/2.zdl08ncA.js       0.32 kB │ gzip:  0.24 kB
+.svelte-kit/output/client/_app/immutable/chunks/CaZiyhDd.js        0.32 kB │ gzip:  0.25 kB
+.svelte-kit/output/client/_app/immutable/nodes/0.3MIRLiEe.js       0.33 kB │ gzip:  0.24 kB
+.svelte-kit/output/client/_app/immutable/chunks/DAizLlb4.js        0.99 kB │ gzip:  0.57 kB
+.svelte-kit/output/client/_app/immutable/nodes/1.mL3Upro_.js       1.05 kB │ gzip:  0.61 kB
+.svelte-kit/output/client/_app/immutable/chunks/D91VdCqg.js        2.47 kB │ gzip:  1.36 kB
+.svelte-kit/output/client/_app/immutable/entry/app.Cf3f5Ds4.js     7.57 kB │ gzip:  3.61 kB
+.svelte-kit/output/client/_app/immutable/chunks/DUfEYuyN.js       14.79 kB │ gzip:  5.95 kB
+.svelte-kit/output/client/_app/immutable/chunks/-J7GdZC9.js       32.32 kB │ gzip: 12.59 kB
+✓ built in 367ms
+.svelte-kit/output/server/.vite/manifest.json                           1.60 kB
+.svelte-kit/output/server/_app/immutable/assets/_layout.KgHW8DOi.css    3.90 kB
+.svelte-kit/output/server/entries/pages/_layout.svelte.js               0.17 kB
+.svelte-kit/output/server/entries/pages/_page.svelte.js                 0.23 kB
+.svelte-kit/output/server/internal.js                                   0.31 kB
+.svelte-kit/output/server/entries/fallbacks/error.svelte.js             1.87 kB
+.svelte-kit/output/server/chunks/index.js                               3.86 kB
+.svelte-kit/output/server/chunks/exports.js                             6.88 kB
+.svelte-kit/output/server/chunks/internal.js                           50.01 kB
+.svelte-kit/output/server/index.js                                    106.31 kB
+✓ built in 2.04s
+
+Run npm run preview to preview your production build locally.
+
+> Using @sveltejs/adapter-node
+  ✔ done
+```
+
+```bash
+.svelte-kit/
+└── output/
+    ├── client/
+    │   ├── _app/
+    │   ├── .vite/
+    │   └── favicon.png
+    └── server/
+        ├── .vite/
+        ├── chunks/
+        ├── entries/
+        ├── nodes/
+        ├── stylesheets/
+        ├── index.js
+        ├── internal.js
+        ├── manifest-full.js
+        └── manifest.js
+build/
+├── client/
+│   ├── _app/
+│   └── favicon.png
+└── server/
+	├── chunks/
+	├── index.js
+	├── index.js.map
+	├── manifest.js 
+	└── manifest.js.map       
+├── env.js
+├── handler.js
+├── index.js     # Note. When you run `node build`, it executes `node ./build/index.js`.
+└── shims.js
 ```
 
 #### *Make dockerfile*
@@ -220,11 +311,11 @@ CMD ["node", "build"]
 
 #### *Build image and Run container*
 
-- `docker build -t svelte-typescript-tailwindcss-study .`
-- `docker run -p 3000:3000 --name svelte-typescript-tailwindcss-study svelte-typescript-tailwindcss-study`
+- `docker build -t svelte-ts-tw-study .`
+- `docker run -p 3000:3000 --name svelte-ts-tw-study svelte-ts-tw-study`
 
 ```bash
-(base) jaoneol@DESKTOP-B7GM3C5:/mnt/d/02.MyCode/GP-MyReference/21.MySvelte/03.svelte-typescript-tailwindcss-study$ docker build -t svelte-typescript-tailwindcss-study .
+(base) jaoneol@DESKTOP-B7GM3C5:/mnt/d/02.MyCode/GP-MyReference/21.MySvelte/06.svelte-ts-tw-study$ docker build -t svelte-ts-tw-study .
 [+] Building 20.0s (20/20) FINISHED                                                                                                                                               docker:default
  => [internal] load build definition from dockerfile                                                                                                                                        0.0s
  => => transferring dockerfile: 784B                                                                                                                                                        0.0s
@@ -251,12 +342,12 @@ CMD ["node", "build"]
  => exporting to image                                                                                                                                                                      0.1s
  => => exporting layers                                                                                                                                                                     0.1s
  => => writing image sha256:57940970d6ee0dea0947aeaf8109acbea92475bf3144c08ca50d121b7e49f6e7                                                                                                0.0s
- => => naming to docker.io/library/svelte-typescript-tailwindcss-study                                                                                                                      0.0s
-(base) jaoneol@DESKTOP-B7GM3C5:/mnt/d/02.MyCode/GP-MyReference/21.MySvelte/03.svelte-typescript-tailwindcss-study$ 
+ => => naming to docker.io/library/svelte-ts-tw-study                                                                                                                     0.0s
+(base) jaoneol@DESKTOP-B7GM3C5:/mnt/d/02.MyCode/GP-MyReference/21.MySvelte/06.svelte-ts-tw-study$ 
 ```
 
 ```bash
-(base) jaoneol@DESKTOP-B7GM3C5:/mnt/d/02.MyCode/GP-MyReference/21.MySvelte/03.svelte-typescript-tailwindcss-study$ docker run -p 3000:3000 --name svelte-typescript-tailwindcss-study svelte-typescript-tailwindcss-study
+(base) jaoneol@DESKTOP-B7GM3C5:/mnt/d/02.MyCode/GP-MyReference/21.MySvelte/06.svelte-ts-tw-study$ docker run -p 3000:3000 --name svelte-ts-tw-study svelte-ts-tw-study
 Listening on http://0.0.0.0:3000
 ```
 
